[project]
name = "blog-backend"
version = "0.1.0"
description = "FastAPI backend for the personal blog CMS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "bleach>=6.4.0",
    "cryptography>=49.0.0",
    "fastapi>=0.137.0",
    "markdown-it-py>=4.2.0",
    "mdit-py-plugins>=0.6.1",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "playwright>=1.56.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
